k8s/config/argocd/patch-argocd-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  # namespace: argocd
spec:
  type: ClusterIP
